# graph-functions

./: .env  .gitignore  DEPLOYMENT_BLUEPRINT.md  Makefile  README.md  SETUP.md  TODO_ANALYSIS_IMPROVEMENTS.md  TYPING.md  argos_description.py  check_neo4j_fields.py  extract_articles_from_neo4j.py  graph_config.py  main.py  main_top_sources.py  model_config.py  mypy.ini  paths.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  run_market_data_workflow.py  set_env_vars.sh  setup.sh  typecheck.py  user_anchor_nodes.py
API/: README_v2.md  STRATEGIES.md  admin_api.py  api_main_v3.py  graph_api.py  test_api_v2.py  test_strategy_api.py
Quality_Assurance_Team/: __init__.py  qa_prompts.py  qa_runner.py
Reports/: export_asset_analysis_pdf.py
backfill_scripts/: backfill_topic_importance.py  count_topics_by_importance.py  link_orphan_articles.py
clean_up_scripts/: cleanup_invalid_importance_nodes.py
data/: copy_old_articles.py
demo_functions/: topic_capacity_guard_llm.py  topic_pruner_llm.py  topic_pruner_minimal_llm.py
dev_scripts/: import_eurusd_articles.py
docs/: DO.md  strategy_analysis_position_plan.md
entry_point_enrich_topic/: generate_keywords_llm.py  relevance_test_llm.py  topic_enrichment.py
entrypoints/: ingest_articles.py  ingest_top_sources.py  write_all.py
events/: classifier.py
func_add_article/: add_article.py  category_identifier_llm.py  impact_identifier_llm.py  node_identifier_llm.py  time_frame_identifier_llm.py  topic_relevance_validator_llm.py
func_add_relationships/: add_link.py  find_relationships.py  get_existing_links.py  llm_filter_all_interesting_topics.py  llm_select_link_to_remove.py  llm_select_one_new_link.py
func_add_topic/: add_node.py  create_query_llm.py  priority_policy.py  propose_new_topic_node.py  topic_category_classifier.py  topic_priority_classifier.py  topic_relevance_gate.py
func_analysis/: analysis_input_formatter.py  analysis_rewriter.py  analysis_rewriter_llm.py  analysis_saver.py  best_articles_selector.py  does_article_replace_old.py  does_article_replace_old_llm.py  driver_aggregator.py  report_aggregator.py  should_rewrite.py  should_rewrite_llm.py
func_remove_relationship/: remove_relationship.py
func_remove_topic/: remove_node.py
graph_db/: __init__.py  db_driver.py  models.py  test_db_driver.py
graph_utils/: check_if_node_exists.py  create_topic_node.py  get_all_nodes.py  get_node_by_id.py  get_topic_analysis_field.py  get_topic_id_by_name.py  graph_stats.py  remove_article_from_graph.py  set_article_hidden.py  update_article_priority.py
master_stats/: statistics_2025_08_07.json  statistics_2025_08_08.json  statistics_2025_08_09.json  statistics_2025_08_11.json  statistics_2025_08_12.json  statistics_2025_08_12_2.json  statistics_2025_08_13.json  statistics_2025_08_13_2.json  statistics_2025_08_14.json  statistics_2025_08_15.json  statistics_2025_08_16.json  statistics_2025_08_17.json  statistics_2025_08_18.json  statistics_2025_08_19.json  statistics_2025_08_20.json  statistics_2025_08_21.json  statistics_2025_08_22.json  (+13 more)
(+22791 files in other folders)
