[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "saga-graph"
version = "1.0.0"
description = "Single-source Architecture & Guidelines for Saga Graph - LLM-powered real-time world macro graph"
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "neo4j-driver==5.28.2",
    "langchain==0.3.27",
    "langchain-core==0.3.75",
    "langchain-openai==0.3.32",
    "langchain-anthropic==0.3.19",
    "langchain-ollama==0.3.7",
    "requests==2.32.5",
    "httpx==0.28.1",
    "trafilatura==2.0.0",
    "fpdf2==2.8.4",
    "neo4j==5.28.2",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "yfinance>=0.2.18",
]

[project.optional-dependencies]
dev = [
    "mypy==1.8.0",
    "types-requests==2.32.0.20241016",
    "pre-commit>=3.0.0",
]
browser = [
    "playwright>=1.40.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/saga-graph"
Repository = "https://github.com/your-username/saga-graph"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

# MyPy configuration (alternative to mypy.ini)
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

# Development scripts
[project.scripts]
saga-typecheck = "scripts.typecheck:main"

[[tool.mypy.overrides]]
module = "fpdf"
ignore_missing_imports = true